Another attempted overflow fix

--- a/sfa.Tl.Marketing.Communication/Frontend/src/scss/helpers/_reset.scss
+++ b/sfa.Tl.Marketing.Communication/Frontend/src/scss/helpers/_reset.scss
@@ -387,5 +387,9 @@ input, select {
 /* Overflow fix */
 
 .tl-overflow--fix {
-    overflow-x: hidden;
+    overflow-x: visible;
+
+    @include media-max(large) {
+        overflow: hidden;
+    }
 }
